# embed-v8

./: .gitignore  CMakeLists.txt  README.md  hello-world.js  hello.cpp  main  main.cpp  micro1.js  micro2.js
lib/: add.cpp  add.h
utils/: file.cpp  file.h  utils.h
v8/: INSTALL_RECEIPT.json
v8/.brew/: v8.rb
v8/include/: APIDesign.md  DEPS  DIR_METADATA  OWNERS  cppgc  js_protocol-1.2.json  js_protocol-1.3.json  js_protocol.pdl  libplatform  v8-array-buffer.h  v8-callbacks.h  v8-container.h  v8-context.h  v8-cppgc.h  v8-data.h  v8-date.h  v8-debug.h  v8-embedder-heap.h  v8-embedder-state-scope.h  v8-exception.h  v8-extension.h  v8-external.h  v8-fast-api-calls.h  v8-forward.h  v8-function-callback.h  v8-function.h  v8-initialization.h  v8-inspector-protocol.h  v8-inspector.h  v8-internal.h  v8-isolate.h  v8-json.h  v8-local-handle.h  v8-locker.h  v8-maybe.h  v8-memory-span.h  v8-message.h  v8-metrics.h  v8-microtask-queue.h  v8-microtask.h  (+29 more)
v8/lib/: libv8.dylib  libv8_libbase.dylib  libv8_libplatform.dylib
v8/libexec/: d8  libchrome_zlib.dylib  libicui18n.dylib  libicuuc.dylib  libthird_party_icu_icui18n.dylib  libv8_libbase.dylib  libv8_libplatform.dylib
